--- a/AR Sound Sculptures/Base.lproj/LaunchScreen.storyboard
+++ b/AR Sound Sculptures/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina5_9" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,15 +16,36 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="travis-park.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="AN5-KS-cti">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Spotify_Logo_RGB_White.png" translatesAutoresizingMaskIntoConstraints="NO" id="GU1-bd-a2V">
+                                <rect key="frame" x="65.666666666666671" y="52" width="243.66666666666663" height="708"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="AN5-KS-cti" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="F1m-AN-vcE"/>
+                            <constraint firstItem="AN5-KS-cti" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="L2b-jy-Jgc"/>
+                            <constraint firstItem="GU1-bd-a2V" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="RQ1-zV-DnK"/>
+                            <constraint firstItem="GU1-bd-a2V" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.65" id="WJN-1d-vn2"/>
+                            <constraint firstItem="AN5-KS-cti" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="ayx-a7-Gdo"/>
+                            <constraint firstItem="GU1-bd-a2V" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="eiJ-IM-8kp"/>
+                            <constraint firstItem="AN5-KS-cti" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="otj-e8-HD2"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Spotify_Logo_RGB_White.png" width="2362" height="708"/>
+        <image name="travis-park.jpg" width="920" height="920"/>
+    </resources>
 </document>
